# mcolib

./: CMakeLists.txt  LICENSE  README.md
cmake/: CompilerFlags-GNU.cmake  CompilerFlags.cmake  Policies.cmake  ProjectFuncs.cmake  mingw64.cmake
doc/concepts/: adapter-stream.md
include/mco/: base_types.hpp  lazy_iterator.hpp  lazy_iterators.hpp  nounit.hpp  pimple_container.hpp  streaming_iterator.hpp  utils.hpp
include/mco/io/: file_stream.hpp  gzip_in_stream.hpp  memory_stream.hpp  stream.hpp  stream_utils.hpp
include/mco/objective/: service.hpp  service_bucket.hpp
src/mco/: CMakeLists.txt  utils.cpp
src/mco/io/: CMakeLists.txt  file_stream.cpp  file_stream_impl.posix.cpp  file_stream_impl.win32.cpp  gzip_in_stream.cpp  memory_stream.cpp  stream.cpp  stream_utils.cpp  writable_stream.cpp
src/mco/nounit/: CMakeLists.txt  assertion_format.cpp  main_impl.cpp  nounit_impl.cpp  test.cpp  test_failure.cpp  test_failure.hpp  test_runner.cpp  test_runner.hpp
src/mco/objective/: CMakeLists.txt  service_bucket.cpp
src/mco/sdlang/: README.md
src/mco/tests/: CMakeLists.txt  file_stream_tests.cpp  lazy_iterator_tests.cpp  memory_stream_tests.cpp  streaming_iterator_tests.cpp
